# eidos-python

./: Makefile  README.md  __init__.py  _baseclass.py  _basemodel.py  base.py  features.py  oceanql.py  pyproject.toml  tox.ini  vegaspec.py  version.py
autogen/: _vegaspec.py  gen_models.sh
core/: __init__.py  dataspec.py  nodes.py  root.py  state.py
docs/: eidos.rst
docs/source/: api.rst  conf.py
docs/source/classes/eidoslib/: eidoslib.eidos.rst
eidos/: __init__.py  features.py  vegaspec.py
eidos/core/: dataspec.py  node.py  root.py
eidos/viewnodes/: plot.py  world.py
eidos/worldlayers/: grid_overlay.py  sea_surface.py  track_overlay.py
oceanum/eidos/: __init__.py  _basemodel.py  base.py  data.py  features.py  oceanql.py  root.py  state.py  theme.py  vegaspec.py  version.py
oceanum/eidos/_templates/: index.j2
oceanum/eidos/core/: __init__.py  dataspec.py  node.py  root.py  state.py
oceanum/eidos/node/: document.py  grid.py  menu.py  plot.py  world.py
oceanum/eidos/node/worldlayer/: feature.py  gridded.py  label.py  scenegraph.py  sea_surface.py  track.py
oceanum/eidos/templates/: index.j2
oceanum/eidos/viewnodes/: document.py  plot.py  world.py
oceanum/eidos/worldlayers/: __init__.py  feature.py  feature_overlay.py  grid.py  label.py  label_overlay.py  scenegraph.py  sea_surface.py  track.py
tests/: test_init.py  test_patch.py  test_plot.py
utils/: gen_init.py  gen_models.sh
viewnodes/: __init__.py  document.py  plot.py  world.py
worldlayers/: __init__.py  feature_overlay.py  grid_overlay.py  label_overlay.py  scenegraph.py  sea_surface.py  track_overlay.py
